--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <!--bootsrap css-->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -14,10 +15,21 @@
         @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
         </style>
     <!--custom css--> 
-    <link rel="stylesheet" href="css/client.css">   
-    <title>Document</title>
+    <link rel="stylesheet" href="css/client.css">     
 </head>
 <body>
+    <!-- toast -->
+    <div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product">Product Name</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            Discount Code: <strong id="code">CODE</strong>
+        </div>
+    </div>
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><i class="far fa-compass"></i> Northwind</a>
@@ -38,9 +50,8 @@
                     </div>
                 </li>
             </ul>
-            
-        </div>
 
+        </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
@@ -59,21 +70,40 @@
                 <button class="btn btn-danger my-2 my-sm-0" type="submit"><i class="fas fa-search"></i><span class="sr-only">Search</span></button>
             </form>
         </div>
-    
     </nav>
     <div class="container-fluid" style="font-family: Permanent Marker;">
         <div class="jumbotron">
             <h1 class="display-4">Northwind</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead">We have the best prices and selection of high quality foods & beverages on the planet! Check out our featured discounts below.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Order now</a>
+            <p>For spectacular international quisuine, look no further.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Order now >></a>
           </div>
+         <!-- grid -->
+        <div class="row">
+            <div class="col-md m-3 p-3 discounts">
+                <h3>Tis the seasoning</h3>
+                <div class="mb-4">
+                    Order today! Save 12.5% on Chef Anton's Italian Seasoning.
+                    You don't want to make Chef Anton mad, do you?
+                </div>
+                <i>Discount expires: 2/25/2019</i><br />
+                <a data href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+            </div>
+            <div class="col-md m-3 p-3 discounts">
+                Col 2
+            </div>
+            <div class="col-md m-3 p-3 discounts">
+                Col 3
+            </div>
+        </div>  
     </div>
-
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!--bootsrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
+    <!--custom js-->
+    <script src="js/client.js"></script>
 </body>
 </html>
