--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
     <link rel="stylesheet" href="css/client.css">     
 </head>
 <body>
+    
     <!-- toast -->
-    <div id="toast" class="toast">
-        <div class="toast-header">
-            <strong class="mr-auto" id="product">Product Name</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="toast-body">
-            Discount Code: <strong id="code">CODE</strong>
-        </div>
-    </div>
+		<div id="toast" class="toast">
+			<div class="toast-header">
+				<strong class="mr-auto" id="product">Product Name</strong>
+				<button
+					type="button"
+					class="ml-2 mb-1 close"
+					data-dismiss="toast"
+					aria-label="Close"
+				>
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="toast-body">
+				Discount Code: <strong id="code">2222</strong>
+			</div>
+		</div>
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><i class="far fa-compass"></i> Northwind</a>
@@ -72,7 +78,7 @@
         </div>
     </nav>
     <div class="container-fluid" style="font-family: Permanent Marker;">
-        <div class="jumbotron">
+        <div class="jumbotron mb-0">
             <h1 class="display-4">Northwind</h1>
             <p class="lead">We have the best prices and selection of high quality foods & beverages on the planet! Check out our featured discounts below.</p>
             <hr class="my-4">
@@ -83,18 +89,29 @@
         <div class="row">
             <div class="col-md m-3 p-3 discounts">
                 <h3>Tis the seasoning</h3>
+
                 <div class="mb-4">
-                    Order today! Save 12.5% on Chef Anton's Italian Seasoning.
+                    Order today! Save 12.5% on Anton's Italian Seasoning.
                     You don't want to make Chef Anton mad, do you?
                 </div>
-                <i>Discount expires: 2/25/2019</i><br />
-                <a data href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+                <i>Discount expires: 2/25/2022</i><br />
+                <a data href="#" class="code" data-code="1111" data-product="Italian Salad"><i class="far fa-hand-point-right"></i> Discount Code</a>
             </div>
             <div class="col-md m-3 p-3 discounts">
-                Col 2
+                <h3>Go Green</h3>
+                <div class="mb-4">
+                    Genen Shouyu goes on sale very rarely. Order now to save 10% off our already low price.
+                </div>
+                <i>Discount expires: 2/25/2022</i><br />
+                <a data href="#" class="code" data-code="1111" data-product="Genen Shouyu"><i class="far fa-hand-point-right"></i> Discount Code</a>
             </div>
             <div class="col-md m-3 p-3 discounts">
-                Col 3
+                <h3>Half Price</h3>
+                <div class="mb-4">
+                    Just because you can"t pronounce "Schoggi Schokolade" doesnt't mean you shouldn't buy it. Get it now for 50% off!
+                </div>
+                <i>Discount expires: 2/25/2022</i><br />
+                <a data href="#" class="code" data-code="1111" data-product="Schoggi Schokolade"><i class="far fa-hand-point-right"></i> Discount Code</a>
             </div>
         </div>  
     </div>
@@ -105,5 +122,6 @@
 
     <!--custom js-->
     <script src="js/client.js"></script>
+    
 </body>
 </html>
