--- a/balloons.html
+++ b/balloons.html
@@ -37,7 +37,7 @@
 <body>
      <!-- content -->
      <div class="container">
-        <h1 id="loadSeeker">Happy Birthday!</h1>
+        <h1 id="hoverOver">Happy Birthday!</h1>
         <form role="form">
             <div class="row">
                 <div class="col-sm">
